# downtime-csv

./: .gitignore  CHANGELOG.md  CI-CD.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
downtime_csv/: __main__.py
